--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -2174,7 +2174,8 @@
             <ul class="nominative">
               <li><i><u>Pies</u> jest <span lang="pl">głodny</span>.</i> – 犬は腹ペコです。</li>
               <li><i>Moja <u>szkoła</u> jest daleko.</i> – 私の学校は遠いです。(代名詞”moja”も主格)</li>
-              <li><i><span lang="pl">Mój</span> <u>komputer</u> nie <span lang="pl">działa</span>.</i> – 私のコンピュータは機能していない。(代名詞”mój”も主格)</li>
+              <li><i><span lang="pl">Mój</span> <u>komputer</u> nie <span lang="pl">działa</span>.</i> –
+                私のコンピュータは機能していない。(代名詞”mój”も主格)</li>
               <li></li><i>Ten <u>telefon</u> nie jest <span lang="pl">mój</span>.</i> – この電話は私のものではない。(代名詞”ten”も主格)</li>
               <li><i><u>Kasia</u> idzie do <span lang="pl">szkoły</span>.</i> – カーシャは学校に向かっています。</li>
             </ul>
@@ -2388,8 +2389,12 @@
           <button class="acc lesson lesson--askingQuestions">質問をする</button>
           <div class="panel">
             <h2>質問をする</h2>
-            <p>物事を説明したり、事実を述べたりする方法を知っておくのはとても大切な事です。また、海外へ行った時には、おそらくたくさん質問をする機会があると思います。このレッスンでは基本的なYes/Noの質問と、疑問詞を用いた質問を学んでいきます。一緒に頑張りましょう！</p>
-            <p>文法を深く掘り下げる前に、質問をする時のポーランド人の姿勢(態度)についてお話ししましょう。丁寧な文法を使うために特別な注意を払う必要がある多くのアジアの言語や、多くの質問が間接的に表現されるイギリス英語や一部の西洋言語とは異なり、ポーランドの人々は単純で直接的な質問の仕方をします。ストレートな表現だと相手に失礼かも…と思って質問をすることを恐れる必要はありません。最も単純な質問方法で聞いてくれれば、私たちポーランド人は喜んでお答えします。</p>
+            <p>
+              物事を説明したり、事実を述べたりする方法を知っておくのはとても大切な事です。また、海外へ行った時には、おそらくたくさん質問をする機会があると思います。このレッスンでは基本的なYes/Noの質問と、疑問詞を用いた質問を学んでいきます。一緒に頑張りましょう！
+            </p>
+            <p>
+              文法を深く掘り下げる前に、質問をする時のポーランド人の姿勢(態度)についてお話ししましょう。丁寧な文法を使うために特別な注意を払う必要がある多くのアジアの言語や、多くの質問が間接的に表現されるイギリス英語や一部の西洋言語とは異なり、ポーランドの人々は単純で直接的な質問の仕方をします。ストレートな表現だと相手に失礼かも…と思って質問をすることを恐れる必要はありません。最も単純な質問方法で聞いてくれれば、私たちポーランド人は喜んでお答えします。
+            </p>
             <h3>1. Yes/Noの質問</h3>
             <p>ではまず、簡単な文章を見てみましょう。 <br><br>
               Anna pracuje w banku. - アンナは銀行で働いています。<br><br>
@@ -2443,13 +2448,335 @@
               Gdzie jest twoja siostra? - あなたの姉妹はどこですか？ <br>
               Gdzie twoja siostra jest? ではありません。 <br><br>
               Kiedy jest jej <span lang="pl">ślub</span>? - 彼女の結婚式はいつですか？ <br>
-Kiedy jej <span lang="pl">ślub</span> jest? ではありません。 <br><br>
-以上が、最も使用する機会がある一般的な質問でした。これらをマスターすれば、日常生活をする上でほとんど問題がなくなるでしょう。まずは、前回のレッスンの文章を質問に変換して練習してください。「nie ma głupich pytań！(愚かな質問はない！）」ということわざもある通り、恐れずたくさん質問をして自信をつけていきましょう！
-              </p>
+              Kiedy jej <span lang="pl">ślub</span> jest? ではありません。 <br><br>
+              以上が、最も使用する機会がある一般的な質問でした。これらをマスターすれば、日常生活をする上でほとんど問題がなくなるでしょう。まずは、前回のレッスンの文章を質問に変換して練習してください。「nie ma
+              głupich pytań！(愚かな質問はない！）」ということわざもある通り、恐れずたくさん質問をして自信をつけていきましょう！
+            </p>
 
             <div class="sign">
               <p class="sign--person">作成者:</p>
               <a href="about.html" target="_blank">@ウェロニカ</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <button class="acc lesson lesson--personalPronouns1">人称代名詞－基礎Part 1－</button>
+          <div class="panel">
+            <h2>人称代名詞－基礎Part 1－</h2>
+            <p>このレッスンでは、人称代名詞について学んでいきます。 新しい単語を学ぶことは比較的簡単ですが、人称代名詞は文脈によって語形変化が生じるので、その点は少し難しいかもしれません。
+              語形変化については、次のレッスンの“Part 2”でご紹介します。
+            </p>
+            <p>ではさっそく、基礎から始めていきましょう。ポーランド語の代名詞は次の通りです。
+            </p>
+            <table style="width:80%">
+              <tr>
+                <th>単数形</th>
+                <th>複数形</th>
+                <th>質問</th>
+              </tr>
+              <tr>
+                <td>
+                  私 – ja<br>
+                  あなた – ty<br>
+                  彼 – on<br>
+                  彼女 – ona
+                  これ - ono
+                </td>
+                <td>
+                  私たち – my<br>
+                  あなたたち – wy<br>
+                  彼ら – oni / one
+                </td>
+                <td>
+                  誰? – Kto? <br>
+                  誰も～ない – nikt<br>
+                  何？ – Co?<br>
+                  何もない – nic
+                </td>
+              </tr>
+            </table>
+            <p>
+              性別に関してですが、on、ona、oni / oneのみが性別を示します。「 Oni」は全員男性または男女混合のグループに使用され、「One」は全員女性のグループに使用されます。
+              <br><br><br>
+              主語が文脈から分かっている場合、代名詞は通常省略されます。
+              <br><br>
+              A: Co (ty) robisz po pracy? / あなたは仕事の後、何をしますか？ <br>
+              B: (Ja) jem obiad i <span lang="pl">jadę na lekcję tańca.</span> / 私は夕飯を食べて、ダンス教室に行きます。
+              <br><br>
+              もし話し手が「“誰が”何をしているか」についてより明確な情報が必要な場合には、以下のように追加できます。
+              <br>
+              A: <b>Kto</b> dzisiaj robi obiad? / 今日は誰が夕飯を作っていますか？
+              <br>
+              B: <span lang="pl"><b>Ja</b> robię! </span>/ 私が作っています！
+              <br><br><br>
+              「kto」の後は通常、単数三人称の動詞を使用しますが、「nikt」と「nic」の後は、否定形の動詞を使用します。
+              <br>
+              A: <b>Kto</b> gra na gitarze? / 誰がギターを弾いていますか？<br>
+              B: <b>Nikt</b> nie <b>gra</b>. / 誰も弾いていないです。
+              <br><br><br>
+              A: Co (ty) <b>robisz</b>? / あなたは何をしているのですか？<br>
+              B: <span lang="pl">Nic (nie <b>robię</b>).</span> / 何もしていません。<br><br><br>
+              上記で使用してきた代名詞はカジュアルなものでした。次にご紹介するものは、よりフォーマルで丁寧なバージョンです。以下の表をご覧ください。
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>単数形</td>
+                <td>複数形</td>
+              </tr>
+              <tr>
+                <td>
+                  旦那様/あなた(フォーマルな場面) – Pan <br>
+                  奥様/あなた(フォーマルな場面) - Pani
+                </td>
+                <td>
+                  あなた方(相手が男性) – Panowie <br>
+                  あなた方(相手が女性) – Panie <br>
+                  皆様(男女合わせて) - Państwo
+                </td>
+              </tr>
+            </table>
+            <p>
+              フォーマルな形の代名詞は、自分よりも位が高い人（上司や教師など）、高齢者、そして知らない人と話をするときに使用されています。
+              <br><br><br>
+              Part1は以上です。<a href="#personalPronouns2">Part 2</a>では「代名詞の語形変化」についてご紹介していきますので、是非ご覧ください♪
+            </p>
+            <div class="sign">
+              <p class="sign--person">作成者:</p>
+              <a href="about.html" target="_blank">@マルティナ</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <button class="acc lesson lesson--personalPronouns2" id="personalPronouns2">人称代名詞－基礎 Part2－</button>
+          <div class="panel">
+            <h2>人称代名詞－基礎 Part2－</h2>
+            <p>人称代名詞がケースによってどのように変化が生じるのか、以下の表をご覧下さい。
+              <br><br><br>
+              単数形、一人称・二人称：
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>主格</td>
+                <td>所有格</td>
+                <td>与格</td>
+                <td>対格</td>
+                <td>助格</td>
+                <td>所格</td>
+              </tr>
+              <tr>
+                <td>Ja</td>
+                <td>Mnie</td>
+                <td>Mi, Mnie</td>
+                <td>Mnie</td>
+                <td><span lang="pl">Mną</span></td>
+                <td>Mnie</td>
+              </tr>
+              <tr>
+                <td>Ty</td>
+                <td><span lang="pl">Cię, Ciebie</span></td>
+                <td>Ci, Tobie</td>
+                <td><span lang="pl">Cię, Ciebie</span></td>
+                <td><span lang="pl">Tobą</span></td>
+                <td>Tobie</td>
+              </tr>
+            </table>
+            <p>所有格、与格、対格の長い形式は通常、前置詞の後に使用されます (所有格のCiebie、与格のMnie/Tobie、
+              対格のCiebieのこと)。また、強調として他の文でも使用できる場合があります。
+              <br><br>
+              A: Gdzie idziemy? <b>Do mnie</b> czy <b>do ciebie</b>? (Gen.) /
+              私たちはどこに行きますか？私の家？それとも君の家？
+              <br>
+              B: <b>Do ciebie</b>. / あなたの家に行きましょう。 <br><br><br>
+              単数形、三人称：
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>主格</td>
+                <td>所有格</td>
+                <td>与格</td>
+                <td>対格</td>
+                <td>助格</td>
+                <td>所格</td>
+              </tr>
+              <tr>
+                <td>On</td>
+                <td>Go, Jego, Niego</td>
+                <td>Mu, Jemu, Niemu</td>
+                <td>Go, Jego, Niego</td>
+                <td>Nim</td>
+                <td>Nim</td>
+              </tr>
+              <tr>
+                <td>Ona</td>
+                <td>Jej, Niej</td>
+                <td>Jej, Niej</td>
+                <td>Jej, <span lang="pl">Nią</span></td>
+                <td><span lang="pl">Nią</span></td>
+                <td>Niej</td>
+              </tr>
+              <tr>
+                <td>Ono</td>
+                <td>Go, Jego, Niego</td>
+                <td>Mu, Jemu, Niemu</td>
+                <td>Je, Nie</td>
+                <td>Nim</td>
+                <td>Nim</td>
+              </tr>
+            </table>
+            <p>最も一般的な形式は、「go、jej、mu、<span lang="pl">nią</span>」などの短い形式です。長い形式の「jego」「jemu」は、
+              強調として使用されることがあります。「N」から始まる形式は、前置詞の後に使用されます。
+              <br><br>
+              <span lang="pl">
+                A: Zaprosiłaś <b>go</b> na imprezę? / 彼をパーティーに招待しましたか？ <br>
+                B: Tak, ale jest zajęty. Pójdę sama, <b>bez niego</b>. /招待しましたが、
+                彼は忙しいみたいです。彼とは行かず、一人で行きます。
+              </span>
+              <br><br><br>
+              複数形、一人称・二人称：
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>主格</td>
+                <td>所有格</td>
+                <td>与格</td>
+                <td>対格</td>
+                <td>助格</td>
+                <td>所格</td>
+              </tr>
+              <tr>
+                <td>My</td>
+                <td>Nas</td>
+                <td>Nam</td>
+                <td>Nas</td>
+                <td>Nami</td>
+                <td>Nas</td>
+              </tr>
+              <tr>
+                <td>Wy</td>
+                <td>Was</td>
+                <td>Wam</td>
+                <td>Was</td>
+                <td>Wami</td>
+                <td>Was</td>
+              </tr>
+            </table>
+            <p>この表はこのままの通りです😊
+              <br><br><br>
+              複数形、三人称：
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>主格</td>
+                <td>所有格</td>
+                <td>与格</td>
+                <td>対格</td>
+                <td>助格</td>
+                <td>所格</td>
+              </tr>
+              <tr>
+                <td>Oni</td>
+                <td>Ich, Nich</td>
+                <td>Im, Nim</td>
+                <td>Ich, Nich</td>
+                <td>Nimi</td>
+                <td>Nich</td>
+              </tr>
+              <tr>
+                <td>One</td>
+                <td>Ich, Nich</td>
+                <td>Im, Nim</td>
+                <td>Ich, Nich</td>
+                <td>Nimi</td>
+                <td>Nich</td>
+              </tr>
+            </table>
+            <p>単数の場合と同じです。「N」から始まる形式は前置詞の後に使用され、それ以外は他の形式が使用されます。「N」から始まる形式に限り、全ての文脈で使用されます。
+              <br><br>
+              <span lang="pl">A: Ugotowałam im zupę, ale dla nich była za słona.</span> / 私は彼らにスープを作ったが、彼らにはしょっぱすぎた。
+              <br><br><br>
+              フォーマル/丁寧な代名詞
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>主格</td>
+                <td>所有格</td>
+                <td>与格</td>
+                <td>対格</td>
+                <td>助格</td>
+                <td>所格</td>
+                <td>呼格</td>
+              </tr>
+              <tr>
+                <td>Pan</td>
+                <td>Pana</td>
+                <td>Panu</td>
+                <td>Pana</td>
+                <td>Panem</td>
+                <td>Panu</td>
+                <td>Panie</td>
+              </tr>
+              <tr>
+                <td>Pani</td>
+                <td>Pani</td>
+                <td>Pani</td>
+                <td><span lang="pl">Panią</span></td>
+                <td><span lang="pl">Panią</span></td>
+                <td>Pani</td>
+                <td>Pani</td>
+              </tr>
+            </table>
+            <table style="width:80%">
+              <tr>
+                <td>主格</td>
+                <td>所有格</td>
+                <td>与格</td>
+                <td>対格</td>
+                <td>助格</td>
+                <td>所格</td>
+                <td>呼格</td>
+              </tr>
+              <tr>
+                <td>Panowie</td>
+                <td>Panów</td>
+                <td>Panom</td>
+                <td>Panów</td>
+                <td>Panami</td>
+                <td>Panach</td>
+                <td>Panowie</td>
+              </tr>
+              <tr>
+                <td>Panie</td>
+                <td><span lang="pl">Pań</span></td>
+                <td>Paniom</td>
+                <td>Panie</td>
+                <td>Paniami</td>
+                <td>Paniach</td>
+                <td>Panie</td>
+              </tr>
+            </table>
+            <table style="width:80%">
+              <tr>
+                <td>主格</td>
+                <td>所有格</td>
+                <td>与格</td>
+                <td>対格</td>
+                <td>助格</td>
+                <td>所格</td>
+                <td>呼格</td>
+              </tr>
+              <tr>
+                <td><span lang="pl">Państwo</span></td>
+                <td><span lang="pl">Państwa</span></td>
+                <td><span lang="pl">Państwu</span></td>
+                <td><span lang="pl">Państwa</span></td>
+                <td><span lang="pl">Państwem</span></td>
+                <td><span lang="pl">Państwu</span></td>
+                <td><span lang="pl">Państwo</span></td>
+              </tr>
+            </table>
+            <div class="sign">
+              <p class="sign--person">作成者:</p>
+              <a href="about.html" target="_blank">@マルティナ</a>
             </div>
           </div>
         </div>
