--- a/lessons.html
+++ b/lessons.html
@@ -1538,16 +1538,18 @@
                   I – ja<br>
                   You – ty<br>
                   He – on<br>
-                  She – ona
+                  She – ona<br>
+                  It – ono 　
                 </td>
                 <td>
-                  It - ono We – my<br>
+                  We – my　<br>
                   You – wy<br>
-                  They – oni / one Who? – Kto?
+                  They – oni / one
                 </td>
                 <td>
+                  Who? – Kto? <br>
                   No one / nobody – nikt<br>
-                  Co? – What?<br>
+                  What? - Co?<br>
                   Nothing – nic
                 </td>
               </tr>
@@ -1558,7 +1560,7 @@
               <br><br><br>
               Pronouns are usually omitted it the subject is known from the context: <br><br>
               A: Co (ty) robisz po pracy? / What do you do after work? <br>
-              B: (Ja) jem obiad i jadę na lekcję tańca. / I eat dinner and go to dancing class. <br>
+              B: <span lang="pl">(Ja) jem obiad i jadę na lekcję tańca.</span> / I eat dinner and go to dancing class. <br>
               However, if the speaker needs a specific information on who is doing something, you might want to add
               it:<br>
               A: Kto dzisiaj robi obiad? / Who is making dinner today?<br>
@@ -1567,10 +1569,7 @@
               After kto we usually use a verb in the singular third person form, while after nikt and nic we use a verb
               in negative form. <br>
               A: Kto gra na gitarze? / Who is playing the guitar?<br>
-              B: Nikt nie gra. / No one is playing.After kto we usually use a verb in the singular third person form,
-              while after nikt and nic we use a verb in negative form. <br>
-              A: Kto gra na gitarze? / Who is playing the guitar?<br>
-              B: Nikt nie gra. / No one is playing. <br><br><br>
+              B: Nikt nie gra. / No one is playing.<br><br><br>
               A: Co (ty) robisz? / What are you doing?<br>
               B: <span lang="pl">Nic (nie robię).</span> / (I’m doing) nothing.<br><br><br>
               All pronouns above are informal – below you will see more formal and polite versions:
@@ -1601,7 +1600,7 @@
             </p>
             <div class="sign">
               <p class="sign--person">written by</p>
-              <a href="about.html" target="_blank">@</a>
+              <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
         </div>
@@ -1610,7 +1609,7 @@
             information part 2</button>
           <div class="panel">
             <h2>Personal pronouns – basic information part 2</h2>
-            <p>Below you will see how personal pronouns are changing depending on a case. <br><br><br>
+            <p>Below you will see how personal pronouns are changing depending on a case. <br><br>
               Singular, 1st an 2nd person:
             </p>
             <table style="width:80%">
@@ -1684,7 +1683,7 @@
               sometimes as an emphasis. Forms starting with n letter are used after prepositions.
               <br><br>
               <span lang="pl">
-                A: Zaprosiłaś <b>go</b> na imprezę? / Did you invite him to the party?
+                A: Zaprosiłaś <b>go</b> na imprezę? / Did you invite him to the party? <br>
                 B: Tak, ale jest zajęty. Pójdę sama, <b>bez niego</b>. / I did, but he is busy. I will go alone, without
                 him.
               </span>
@@ -1835,7 +1834,7 @@
             </table>
             <div class="sign">
               <p class="sign--person">written by</p>
-              <a href="about.html" target="_blank">@</a>
+              <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
         </div>
