--- a/vi/lessons.html
+++ b/vi/lessons.html
@@ -1654,6 +1654,246 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <button class="acc lesson lesson--personalPronouns2" id="personalPronouns2">Đại từ nhân xưng (phần 2).
+          </button>
+          <div class="panel">
+            <h2>Đại từ nhân xưng (phần 2).</h2>
+            <p>Bạn sẽ thấy ở dưới đây các đại từ nhân xưng thay đổi như thế nào tùy thuộc vào từng trường hợp. <br><br>
+              Ngôi thứ nhất và ngôi thứ hai - số ít:
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive(*)</td>
+                <td>Dative(*)</td>
+                <td>Accusative(*)</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+              </tr>
+              <tr>
+                <td>Ja (tôi)</td>
+                <td>Mnie (tôi)</td>
+                <td>Mi, Mnie (tôi)</td>
+                <td>Mnie (tôi)</td>
+                <td><span lang="pl">Mną</span> (tôi)</td>
+                <td>Mnie (tôi)</td>
+              </tr>
+              <tr>
+                <td>Ty (bạn)</td>
+                <td><span lang="pl">Cię, Ciebie</span> (bạn)</td>
+                <td>Ci, Tobie (bạn)</td>
+                <td><span lang="pl">Cię, Ciebie</span> (bạn)</td>
+                <td><span lang="pl">Tobą</span> (bạn)</td>
+                <td>Tobie (bạn)</td>
+              </tr>
+            </table>
+            <p>
+              (*) Các dạng dài hơn trong Genitive, Dative và Accusative thường được sử dụng sau giới từ. Đôi khi chúng cũng có thể được sử dụng trong các câu khác để nhấn mạnh.
+              <br><br>
+              Ví dụ: trường hợp Genitive <br><br>
+              A: Gdzie idziemy? <b>Do mnie</b> czy <b>do ciebie</b>? (Gen.) / Chúng ta đi đâu? Chỗ của mình hay chỗ của bạn?
+              <br>
+              B: <b>Do ciebie</b>. / Đến chỗ của bạn chứ. <br><br><br>
+              Ngôi thứ ba - số ít:
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+              </tr>
+              <tr>
+                <td>On (Anh ta)</td>
+                <td>Go, Jego, Niego (Anh ta)</td>
+                <td>Mu, Jemu, Niemu (Anh ta)</td>
+                <td>Go, Jego, Niego (Anh ta)</td>
+                <td>Nim (Anh ta)</td>
+                <td>Nim (Anh ta)</td>
+              </tr>
+              <tr>
+                <td>Ona (Cô ta)</td>
+                <td>Jej, Niej (Cô ta)</td>
+                <td>Jej, Niej (Cô ta)</td>
+                <td>Jej, <span lang="pl">Nią</span> (Cô ta)</td>
+                <td><span lang="pl">Nią</span> (Cô ta)</td>
+                <td>Niej (Cô ta)</td>
+              </tr>
+              <tr>
+                <td>Ono (Nó)</td>
+                <td>Go, Jego, Niego (Nó)</td>
+                <td>Mu, Jemu, Niemu (Nó)</td>
+                <td>Je, Nie</td>
+                <td>Nim (Nó)</td>
+                <td>Nim (Nó)</td>
+              </tr>
+            </table>
+            <p>Dạng ngắn (như <b>go, jej, mu, nią</b>) ) thì phổ biến hơn. <br>
+              Dạng dài (như <b>jego</b> và <b>jemu</b>) đôi khi được sử dụng để nhấn mạnh. <br>
+              Dạng bắt đầu bằng chữ cái <b>n</b> (như niej, niego) được sử dụng sau giới từ.
+              <br><br>
+              <span lang="pl">
+                A: Zaprosiłaś <b>go</b> na imprezę? / Bạn có mời anh ấy đến bữa tiệc không? <br>
+                B: Tak, ale jest zajęty. Pójdę sama, <b>bez niego</b>. // Tôi đã mời, nhưng anh ấy đang bận. Tôi sẽ đi một mình mà không có anh ấy.
+              </span>
+              <br><br><br>
+              Ngôi thứ nhất và ngôi thứ hai - số nhiều:
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+              </tr>
+              <tr>
+                <td>My (chúng tôi, chúng ta)</td>
+                <td>Nas (chúng tôi, chúng ta)</td>
+                <td>Nam (chúng tôi, chúng ta)</td>
+                <td>Nas (chúng tôi, chúng ta)</td>
+                <td>Nami (chúng tôi, chúng ta)</td>
+                <td>Nas (chúng tôi, chúng ta)</td>
+              </tr>
+              <tr>
+                <td>Wy (các bạn)</td>
+                <td>Was (các bạn)</td>
+                <td>Wam (các bạn)</td>
+                <td>Was (các bạn)</td>
+                <td>Wami (các bạn)</td>
+                <td>Was (các bạn)</td>
+              </tr>
+            </table>
+            <p>Mình mong là các giải thích ở trên dễ hiểu cho các bạn. 😊
+              <br><br><br>
+              Ngôi thứ ba - số nhiều:
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+              </tr>
+              <tr>
+                <td>Oni (họ) (**)</td>
+                <td>Ich, Nich</td>
+                <td>Im, Nim</td>
+                <td>Ich, Nich</td>
+                <td>Nimi</td>
+                <td>Nich</td>
+              </tr>
+              <tr>
+                <td>One (họ) (**)</td>
+                <td>Ich, Nich</td>
+                <td>Im, Nim</td>
+                <td>Ich, Nich</td>
+                <td>Nimi</td>
+                <td>Nich</td>
+              </tr>
+            </table>
+            <p>Như đã nói ở phần 1: <br>
+              (**) <b>Oni</b> dùng để nói về nhóm người chỉ toàn nam giới hoặc nhóm người gồm nam lẫn nữ. <br>
+              (***) <b>One</b> dùng để nói về nhóm người chỉ toàn nữ giớ. <br><br>
+
+              Cách sử dụng Ngôi thứ ba số nhiều cũng giống như với Ngôi thứ ba số nhiều ít: Các dạng bắt đầu bằng chữ cái
+              <b>n</b> (như Nim, Nich, Nie) được sử dụng sau giới từ, khác với các dạng khác (như <b>Ich, Im</b>). Ở dạng duy nhất bắt đầu
+              bằng chữ cái <b>n</b> là <b>nich</b>, thì nó được sử dụng trong mọi ngữ cảnh.
+              <br><br>
+              <span lang="pl">A: Ugotowałam im zupę, ale dla nich była za słona. / Tôi đã làm cho họ món súp nhưng đối với họ thì nó quá mặn.
+              </span> <br><br><br>
+              <b>Đại từ nhân xưng trang trọng / lịch sự: </b>
+            </p>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+                <td>Vocative</td>
+              </tr>
+              <tr>
+                <td>Pan (ông)</td>
+                <td>Pana</td>
+                <td>Panu</td>
+                <td>Pana</td>
+                <td>Panem</td>
+                <td>Panu</td>
+                <td>Panie</td>
+              </tr>
+              <tr>
+                <td>Pani (cô, bà)</td>
+                <td>Pani</td>
+                <td>Pani</td>
+                <td><span lang="pl">Panią</span></td>
+                <td><span lang="pl">Panią</span></td>
+                <td>Pani</td>
+                <td>Pani</td>
+              </tr>
+            </table>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+                <td>Vocative</td>
+              </tr>
+              <tr>
+                <td>Panowie (quý ông)</td>
+                <td>Panów</td>
+                <td>Panom</td>
+                <td>Panów</td>
+                <td>Panami</td>
+                <td>Panach</td>
+                <td>Panowie</td>
+              </tr>
+              <tr>
+                <td>Panie (quý cô, quý bà)</td>
+                <td><span lang="pl">Pań</span></td>
+                <td>Paniom</td>
+                <td>Panie</td>
+                <td>Paniami</td>
+                <td>Paniach</td>
+                <td>Panie</td>
+              </tr>
+            </table>
+            <table style="width:80%">
+              <tr>
+                <td>Nominative</td>
+                <td>Genitive</td>
+                <td>Dative</td>
+                <td>Accusative</td>
+                <td>Instrumental</td>
+                <td>Locative</td>
+                <td>Vocative</td>
+              </tr>
+              <tr>
+                <td><span lang="pl">Państwo (quý ngài)</span></td>
+                <td><span lang="pl">Państwa</span></td>
+                <td><span lang="pl">Państwu</span></td>
+                <td><span lang="pl">Państwa</span></td>
+                <td><span lang="pl">Państwem</span></td>
+                <td><span lang="pl">Państwu</span></td>
+                <td><span lang="pl">Państwo</span></td>
+              </tr>
+            </table>
+            <div class="sign">
+              <p class="sign--person">Được viết bởi</p>
+              <a href="about.html" target="_blank">@Martyna</a>
+            </div>
+          </div>
+        </div>
         <!-- <button class="accordion-4">acc lesson 3</button>
         <div class="panel">
           <h2>acc lesson 3</h2><br>
