--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -1445,7 +1445,7 @@
               B: Nikt nie gra. / 没有人在弹。<br><br><br>
               A: Co (ty) robisz? / 你在做什么？<br>
               B: <span lang="pl">Nic (nie robię).</span> / （我）没（做）什么。 <br><br><br>
-              All pronouns above are informal – below you will see more formal and polite versions:
+              以上所有代词都是非正式场合使用的，以下你会看到更正式和礼貌的表达。
             </p>
             <table style="width:80%">
               <tr>
