--- a/ch/index.html
+++ b/ch/index.html
@@ -76,6 +76,26 @@
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
+                                <h2 lang="pl">Cześć i czołem! :)</h2>
+                                <p class="data"> 2020年01月14日 | 编辑: <a href="about.html" target="_blank"
+                                        class="author">@Robert</a></p>
+                                <img src="./../assets/img/embl/zaimki-1.jpg" alt="christmas with SARO"
+                                    class="image-right__center" />
+                                <p>内容：我们1月又更新了，首先对于延迟的更新，我们表示抱歉，这期间我们正在为更新我们的网站功能。
+                                    你们将可以注册和查看自己的学习进度，同时我们还在准备语言交换的网页，让你们可以找到波兰母语者作语言交换。
+                                </p>
+                                <p>今天的更新包括:</p>
+                                <b>课程:</b>
+                                <ul class="lessons-list">
+                                    <li><a href="./lessons.html">第一部分</a></li>
+                                    <li><a href="./lessons.html">第二部分</a></li>
+                                </ul>
+                                <p style="margin-top: 10px;">祝好， <br>
+                                    SARO全体成员</p>
+                            </div>
+                        </div>
+                        <div class="box-news__item">
+                            <div class="box-news">
                                 <h2>聖誕節快樂</h2>
                                 <p class="data"> 2020年12月24日 | 编辑: <a href="about.html" target="_blank"
                                         class="author">@Robert</a></p>
