--- a/index.html
+++ b/index.html
@@ -76,6 +76,30 @@
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
+                                <h2 lang="pl">Cześć i czołem! :)</h2>
+                                <p class="data"> 14.01.2020 | author: <a href="about.html" target="_blank"
+                                        class="author">@Robert</a></p>
+                                <img src="./assets/img/embl/zaimki-1.jpg" alt="christmas with SARO"
+                                    class="image-right__center" />
+                                <p>We back with an update for January! We are sorry that our updating is really slow
+                                    these days but we are working on a new website for you guys. <br>
+                                    You will be able to register yourself and check your studying progress, also we are
+                                    preparing a language exchange page that you could to find a Polish native
+                                    speaker for
+                                    language exchange.
+                                </p>
+                                <p>Today's update includes:</p>
+                                <b>Lessons:</b>
+                                <ul class="lessons-list">
+                                    <li><a href="./lessons.html">Zaimki part 1</a></li>
+                                    <li><a href="./lessons.html">Zaimki part 2</a></li>
+                                </ul>
+                                <p style="margin-top: 10px;">Best regards, <br>
+                                    Saro-crew.</p>
+                            </div>
+                        </div>
+                        <div class="box-news__item">
+                            <div class="box-news">
                                 <h2>Merry Christmas!</h2>
                                 <p class="data"> 24.12.2020 | author: <a href="about.html" target="_blank"
                                         class="author">@Robert</a></p>
