--- a/vi/index.html
+++ b/vi/index.html
@@ -81,6 +81,29 @@
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
+                                <h2 lang="pl">Cześć i czołem! :)</h2>
+                                <p class="data"> 14.01.2020 | Tác giả: <a href="about.html" target="_blank"
+                                        class="author">@Robert</a></p>
+                                <img src="./../assets/img/embl/zaimki-1.jpg" alt="christmas with SARO"
+                                    class="image-right__center" />
+                                <p>Chúng tôi trở lại với cập nhật mới cho tháng 1! Chúng tôi rất xin lỗi vì cập nhập
+                                    chậm trong những ngày này nhưng chúng tôi đangtạo một trang web mới cho các bạn.
+                                    Bạn sẽ có thể tự đăng ký và kiểm tra tiến độ học tập của mình, chúng tôi cũng đang
+                                    chuẩn bị cho dự án trao đổi ngôn ngữ để bạn có thể tìm người bản ngữ Ba Lan để học
+                                    ngôn ngữ.
+                                </p>
+                                <p>Có gì mới hôm nay:</p>
+                                <b>Bài học:</b>
+                                <ul class="lessons-list">
+                                    <li><a href="./lessons.html">ĐẠI TỪ NHÂN XƯNG phần 1</a></li>
+                                    <li><a href="./lessons.html">ĐẠI TỪ NHÂN XƯNG phần 2</a></li>
+                                </ul>
+                                <p style="margin-top: 10px;">Thân án, <br>
+                                    Đội ngũ Saro.</p>
+                            </div>
+                        </div>
+                        <div class="box-news__item">
+                            <div class="box-news">
                                 <h2>Giáng sinh vui vẻ</h2>
                                 <p class="data"> 24.12.2020 | Tác giả: <a href="about.html" target="_blank"
                                         class="author">@Robert</a></p>
